--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,20 @@ body {
     text-wrap: balance;
   }
 }
+/* anim */
+.path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: dash 5s linear alternate infinite;
+}
+
+@keyframes dash {
+
+  from {
+
+    stroke-dashoffset: 822;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
