--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,60 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+.teg_text {
+  font-size: 30px;
+  font-weight: bold;
+}
+.text_wrap {
+  text-align: center;
+  justify-content: center;
+  background: #5f5d5d;
+  font-weight: bold;
+  background: radial-gradient(
+    circle farthest-side at center center,
+    #c9c7c7 50%,
+    #928f91 100%
+  );
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: relative;
+}
 
+.text_wrap::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 30%;
+  height: 100%;
+  filter: blur(200px);
+  /* background-color: blue; */
+  /* animation: lightPass 4s linear infinite; */
+  /* animation-direction: reverse;  */
+}
+@keyframes lightPass {
+  0% {
+    transform: translateX(-80%);
+    transform: translateY(-40%);
+
+    /* background:  radial-gradient(to right, rgba(138, 134, 134, 0.8) 100%, rgba(214, 207, 207, 0) 100%); */
+    background: radial-gradient(
+      circle farthest-side at center center,
+      #6b6666 50%,
+      #413a40 100%
+    );
+  }
+  100% {
+    transform: translateX(100%);
+
+    /* background:  radial-gradient(to right, rgba(255, 255, 255, 0) 100%, rgba(255, 255, 255, 0) 100%); */
+    background: radial-gradient(
+      circle farthest-side at center center,
+      #c9c7c7 50%,
+      #413a40 100%
+    );
+  }
+}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -39,9 +92,7 @@ body {
 }
 
 @keyframes dash {
-
   from {
-
     stroke-dashoffset: 822;
   }
   to {
