--- a/app/globals.css
+++ b/app/globals.css
@@ -83,6 +83,9 @@
     @apply font-bold text-4xl md:text-5xl text-center;
   }
 
+  .header_title {
+    @apply text-[40px] text-transparent bg-clip-text bg-gradient-to-b from-neutral-50 to-neutral-400 bg-opacity-50;
+  }
   .black-gradient {
     background: linear-gradient(90deg, #161a31 0%, #06091f 100%);
   }
